--- a/templates/backup_logical.sh.j2
+++ b/templates/backup_logical.sh.j2
@@ -18,6 +18,7 @@ pg_dumpall \
     | borg create -v --stats --umask {{ item.borg_umask|default("0077") }} --stdin-name=dump.sql.bz {{ item.borg_repository }}::{{ '{utcnow}-{borgversion}' }} -
 
 borg prune --list --stats -v \
+    --umask {{ item.borg_umask|default("0077") }} \
     {% if item.retention_within is defined %}
     --keep-within={{ item.retention_within }} \
     {% endif %}
